# BinanceCryptoKline

./: .gitignore  Cargo.toml  K线数据服务启动指南.md  LAUNCHER_README.md  README.md  README_PERFORMANCE_TESTING.md  aggregate.ps1  aggregate_new.ps1  aggregate_weblog.ps1  all.ps1  analyze_transaction_log.py  build.rs  check_database.ps1  check_database.py  check_database_compact.py  check_database_en.ps1  check_database_split.py  copy-on-demand.ps1  count_symbols.py  data.ps1  data_weblog.ps1  debug_kline_aggregate.ps1  debug_proxy.ps1  debug_with_timeout.ps1  detect_gaps.ps1  download_from_april8.bat  download_with_debug.bat  example.md  example_with_proxy.ps1  fix_all_bat_files.bat  fix_python_path.ps1  klagg_production.ps1  klagg_simple.ps1  klagg_sub.ps1  klagg_sub_prod.ps1  kline_aggregate_with_console.ps1  kline_api_comparison.md  kline_data.db-shm  kline_data.db-wal  kline_download_flow.md  (+49 more)
.cargo/: config.toml
check/: README.md  db_monitor.py  optimize_sqlite.ps1  run_all_monitors.ps1  run_all_tests.ps1  run_btc_test.ps1  run_monitor.ps1  simple_menu.ps1  test_all_symbols.ps1  test_main_symbols.ps1  ws_monitor.py
config/: 2.toml  BinanceKlineConfig.toml  aggregate_config.toml  logging_config.toml
docs/: AI调试SOP.md  AI调试流程.md  AI驱动的系统诊断标准操作流程 (SOP).md  AI驱动的软件开发工作流.md  Cerberus技术架构设计.md  Cerberus超级断言系统Phase1实现计划.md  Cerberus验证规则详细说明.md  Flower_SS  K线合成程序添加日志  K线数据连续性保障设计文档 (V3.0).md  K线聚合服务单线程重构实施文档.md  K线聚合服务单线程重构实施进度记录.md  K线聚合服务单线程重构方案.md  LLM友好型功能模块定义列表.md  Visual Studio内存调试指南.md  api.md  api.txt  architecture.md  clash.txt  db.md  debug_snapshot_system.md  high_performance_kline.md  high_performance_kline_architecture.md  kline_actor_synthesis_flow.md  kline_aggregate_review123.md  kline_aggregation_algorithm.md  kline_aggregation_changes.md  kline_aggregation_implementation_plan.md  kline_data_download_flow.md  kline_downloader_flowcharts.md  kline_synthesis_flow.md  kline_synthesis_optimized_flow.md  k线下载业务函数.md  k线内存数据库.md  k线聚合业务函数.md  k线聚合程序失效修改.md  k线聚合简报.md  k线聚合简洁文档.md  k线聚合补遗.md  modules.md  (+66 more)
docs/weblog/: WebLog系统重构文档-后端聚合架构.md  WebLog重构完成报告.md  WebLog重构技术实现细节.md  前端重构指南.md  实时原始日志显示修复报告.md  数据流程清理报告.md  日志显示优化报告.md  重构计划和时间表.md
docs/websocket_refactor/: README.md  aggtrade_vs_kline.md  implementation_plan.md
docs/币安文档/: 实时订阅取消数据流  市场数据连接端点
examples/: api_tracing_demo.rs  db_tracing_demo.rs  error_classification_demo.rs  mini_ticker_example.rs
logs/: kldata.log.2025-06-07
macros/: Cargo.toml
macros/src/: lib.rs
prompt/: AI调试提示词.md  AI调试提示词1.toml  AI调试提示词6.0.toml  AI调试提示词_新版.toml  业务函数流程提示词.toml  业务函数流程提示词2.0.toml  业务日志埋点提示词.md  函数执行路径日志提示词  函数执行路径日志提示词.txt  函数路径原型提示词3.0.ini  函数路径提示词2.0.txt  函数路径提示词新.txt  性能日志埋点提示词.toml  找出高频函数  日志埋点提示词.toml  日志埋点提示词1.0.toml  日志埋点提示词2.toml  架构分析提示词.toml  模块化日志提示词.ini  模块化日志提示词.txt  追踪日志提示词.ini
scripts/: analyze_trace.py  clean_logs.ps1  fix_target_syntax.ps1  fix_vs_debug.ps1  kline_integrity_checker.ps1  launcher.ps1  performance_comparison.ps1  process_transaction_log.py  query_span.ps1  quick_vs_debug.ps1  read_config.ps1  read_unified_config.ps1  run_klineaggnew.ps1  run_trace_analysis.ps1  start_data_audit.ps1  start_data_audit_quick.ps1  start_data_audit_test.ps1  start_kline_clean.ps1  start_simd.ps1  start_standard.ps1  summarize_logs.py  test_async_logging.ps1  test_business_logging.ps1  test_log_types.ps1  test_loop_tracing.ps1  vs_debug_setup.ps1  vs_debug_with_console.ps1
src/: api.rs  config.rs  db.rs  downloader.rs  error.rs  kline_data.db  kline_data.db-shm  kline_data.db-wal  lib.rs  main.rs  models.rs  startup_check.rs  storage.rs  utils.rs
src/Log-MCP-Server/: Cargo.toml  README.md  config.toml  output.txt  query_commands.ps1  query_commands.txt  test_log_sender.ps1  test_mcp.ps1  test_multi_session.ps1  test_named_pipe.ps1
src/Log-MCP-Server/src/: log_mcp_daemon.rs  log_mcp_daemon.txt
src/config/: aggregate_config.toml
src/engine/: events.rs  mod.rs  tests.rs  tracker.rs  web_server.rs
src/klagg_sub_threads/: auditor.rs  gateway.rs  global_clock.rs  lifecycle_validator.rs  mod - 副本.rs  mod.rs  symbol_manager.rs  tests.rs  web_server.rs
src/klaggnew/: aggregator.rs  mod.rs  persistence.rs
src/klaggregate/: buffered_kline_store.rs  config.rs  kline_data_persistence.rs  market_data_ingestor.rs  mod.rs  observability.rs  symbol_kline_aggregator.rs  symbol_metadata_registry.rs  trade_event_router.rs  types.rs  validation_rules.rs
src/klcommon/: agg_trade_handler.rs  api.rs  api.txt  config.rs  context.rs  db.rs  db.txt  error.rs  kline_builder.rs  logging_setup.rs  mod.rs  models.rs  proxy.rs  server_time_sync.rs  websocket - 副本.txt  websocket.rs
src/kldata/: aggregator.rs  backfill.rs  backfill.txt  backfillcopy.rs  latest_kline_updater.rs  mod.rs  timestamp_checker.rs
src/kldownload/: api.rs  config.rs  db.rs  downloader.rs  mod.rs  models.rs  storage.rs  utils.rs
src/klserver/: api.rs  config.rs  db.rs  error.rs  mod.rs  models.rs  startup_check.rs  test_continuous_kline_client.rs
src/models/: actor_model.rs  mod.rs
src/temp/: 1.txt  (+5 more)
src/weblog/: Cargo.toml  README.md  start_simple.ps1  start_weblog_with_window.ps1  test_config.rs  test_logs.ps1
src/weblog/config/: logging_config.toml
src/weblog/docs/: frontend_data_flow.md  tracing_log_specification.md  weblog-data-flow.md  weblog_data_flow.md  前端数据流程分析.md  后端重构计划.md
src/weblog/examples/: log_generator.rs
src/weblog/src/: lib.rs  log_aggregator.rs  log_parser.rs  module_manager.rs  types.rs  web_server.rs  web_server.txt
src/weblog/src/tempfold/: lib.txt  web_server.txt
src/weblog/static/: debug_xterm.html  index - 副本.html  index.html  index_xterm.html  indexold.html  test.html  trace_viewer.html
static/: index.html  test.html
temp/: 提示词.txt
tempfold/: index.html  log_parser.txt  types.txt
tests/: README.md  aggregator_test.rs  downloader_test.rs  integration_test.rs  main.rs  run_ws_tests.ps1  streamer_test.rs  test_binance_aggtrade_fastws.rs  test_binance_fasws.rs  test_error_classification.rs  test_server_time.rs  test_server_time_sync.rs  test_trace_context.rs  web_test.rs  weekly_alignment_test.rs
(+78 files in other folders)
