[package]
name = "kline_server"
version = "0.1.0"
edition = "2021"
description = "A Rust server for managing and serving Binance U-margined perpetual futures kline data"
authors = ["Quant Team"]

[lints.rust]
deprecated = "allow"

[[bin]]
name = "kline_server"
path = "src/bin/kline_server.rs"

[[bin]]
name = "kline_data_service"
path = "src/bin/kline_data_service.rs"

[[bin]]
name = "klagg_sub_threads"
path = "src/bin/klagg_sub_threads.rs"

[[bin]]
name = "klagg_visual_test"
path = "src/bin/klagg_visual_test.rs"
# 审计功能现在可以通过 --features full-audit 选择性启用

[[bin]]
name = "data_audit"
path = "src/bin/data_audit.rs"

[[bin]]
name = "builtin_proxy_service"
path = "src/bin/builtin_proxy_service.rs"




[lib]
name = "kline_server"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shadowsocks-service = { version = "1.23.6", features = ["local", "server"] }
chrono = "0.4"
core_affinity = "0.8"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
fern = "0.6" # Add fern
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3.31"
futures-util = "0.3.28"
tokio-stream = "0.1"
csv = "1.2"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "time",
] }
tracing-appender = "0.2"
tracing-log = "0.2"
# 追踪上下文传递支持
tracing-futures = "0.2"
# 性能分析支持
tracing-flame = "0.2"
kline-macros = { path = "macros" }
rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
async-tungstenite = { version = "0.23", features = [
    "tokio-runtime",
    "tokio-native-tls",
] }
tungstenite = { version = "0.20", features = ["native-tls"] }
tokio-native-tls = "0.3"
ws = "0.9"
url = "2.4"
socks = "0.3"
fastwebsockets = { version = "0.10", features = ["upgrade", "unstable-split"] }
tokio-socks = "0.5"
base64 = "0.13"
bytes = "1.5"
futures-channel = "0.3"
http = "0.2"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio-rustls = "0.24"
rustls = { version = "0.21", features = [
    "dangerous_configuration",
] } # dangerous_configuration might be needed for custom cert verification if required later
rustls-native-certs = "0.6"
webpki = "0.22"
webpki-roots = "0.22"
awc = { version = "3", features = ["rustls"] }
actix-rt = "2"
ring = "=0.17.13" # Pin ring version to try and fix build issues
once_cell = "1.18"
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tokio-util = "0.7"
scopeguard = "1.2"
crossbeam-channel = "0.5"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
toml = "0.8"
dashmap = "5.5"
uuid = { version = "1.0", features = ["v4"] }
md5 = "0.7"
async-trait = "0.1.88"
rand = "0.9.1"
wide = { version = "0.7", optional = true }

glam = { version = "0.30.5", features = ["bytemuck", "mint", "rand", "serde"] }
simba = { version = "0.9.0", features = ["wide"] }

[dev-dependencies]

[profile.dev]
debug = true
opt-level = 0
overflow-checks = true

[profile.release]
debug = true  # 保留调试信息用于性能分析
opt-level = 3
lto = true

[features]
# 默认情况下不启用任何审计功能，用于生产环境
default = []
simd = ["wide"]

# 定义一个 "full-audit" 功能，它会启用所有用于调试和校验的子系统
full-audit = []
