[package]
name = "log-mcp-server"
version = "0.1.0"
edition = "2021"
description = "Log MCP Server - 为AI模型提供日志查询的MCP协议服务器"
authors = ["Quant Team"]

[[bin]]
name = "log_mcp_daemon"
path = "src/log_mcp_daemon.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
