[package]
name = "weblog"
version = "0.1.0"
edition = "2021"
description = "通用Web日志显示系统 - 基于tracing规范的日志可视化工具"
authors = ["WebLog Team"]

[[bin]]
name = "weblog"
path = "bin/weblog.rs"

[[example]]
name = "log_generator"
required-features = ["examples"]

[dependencies]
# Web框架
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
hyper = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 系统交互
named_pipe = "0.4"

# 正则表达式
regex = "1.0"

# 命令行参数解析
clap = { version = "4.0", features = ["derive"] }

# 示例程序依赖
rand = { version = "0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
examples = ["rand"]
